Fix attach menu bots without icon Fix round videos border-radius on Safari Replace hash on logout Fix setting 2FA password without hint

--- a/src/scss/partials/_chatBubble.scss
+++ b/src/scss/partials/_chatBubble.scss
@@ -729,6 +729,7 @@
     .attachment {
       max-width: var(--round-video-size) !important;
       max-height: var(--round-video-size) !important;
+      border-radius: 50%;
       // width: var(--round-video-size) !important;
       // height: var(--round-video-size) !important;
     }
